--- a/tablayoutlib/src/main/res/values/attrs.xml
+++ b/tablayoutlib/src/main/res/values/attrs.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <declare-styleable name="ColorTrackView">
-        <attr name="changeColor" format="color" />
-        <attr name="progress" format="float" />
+        <attr name="ct_changeColor" format="color" />
+        <attr name="ct_progress" format="float" />
     </declare-styleable>
 
     <declare-styleable name="ColorTrackTabLayout">
-        <attr name="tabTextColor" format="color" />
-        <attr name="tabSelectTextColor" format="color" />
-        <attr name="tabTextSize" format="dimension" />
-        <attr name="tabSelectScale" format="float" />
-        <attr name="tabPadding" format="dimension" />
-        <attr name="startScrollX" format="dimension" />
-        <attr name="tabForeground" format="reference"/>
-        <attr name="tabMode">
+        <attr name="ct_tabTextColor" format="color" />
+        <attr name="ct_tabSelectTextColor" format="color" />
+        <attr name="ct_tabTextSize" format="dimension" />
+        <attr name="ct_tabSelectScale" format="float" />
+        <attr name="ct_tabPadding" format="dimension" />
+        <attr name="ct_startScrollX" format="dimension" />
+        <attr name="ct_tabForeground" format="reference"/>
+        <attr name="ct_tabMode">
             <enum name="scroll" value="0" />
             <enum name="fill" value="1" />
         </attr>
